--- a/app/src/main/res/values/auth.xml
+++ b/app/src/main/res/values/auth.xml
@@ -5,4 +5,11 @@
     <string name="log_in">Login</string>
     <string name="forgot_your_password">Forgot your password?</string>
     <string name="don_t_have_an_account_register_now">Don\'t have an account? <b>Register Now</b></string>
+
+    <!-- Sign up -->
+    <string name="full_name">Full Name</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="already_customer_login_now">Already have an account? <b>Login now</b></string>
+    <string name="email">Email</string>
 </resources>
